Minor text wrap fix

--- a/src/dataelementinfo/dataelementinfo.sass
+++ b/src/dataelementinfo/dataelementinfo.sass
@@ -41,6 +41,8 @@
       padding: 0 1rem
       font-size: 1.2rem
       font-weight: normal
+      max-width: 400px
+      text-align: left
 
 .data-element-info-wrap:hover
   .data-element-hover
